# drip

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/drip-app/: Cargo.toml
crates/drip-app/src/: backtest.rs  lib.rs  usecases.rs
crates/drip-brokers/: Cargo.toml
crates/drip-brokers/src/: connect.rs  http.rs  kis.rs  kis_domestic.rs  kis_session.rs  lib.rs  paper.rs  toss.rs
crates/drip-cli/: Cargo.toml
crates/drip-cli/src/: engine.rs  main.rs
crates/drip-domain/: Cargo.toml
crates/drip-domain/src/: calendar.rs  error.rs  lib.rs  market.rs  money.rs  order.rs  ports.rs  position.rs  risk.rs  schedule.rs  settlement.rs
crates/drip-infra/: Cargo.toml
crates/drip-infra/src/: config.rs  data.rs  lib.rs  logging.rs  migrate.rs  secrets.rs  state.rs
crates/drip-strategies/: Cargo.toml
crates/drip-strategies/src/: infinite_buying.rs  lib.rs  registry.rs
crates/drip-web/: Cargo.toml
crates/drip-web/src/: dashboard.html  lib.rs
docs/: M2-engine-sketch.md
examples/: tqqq-sample.csv
