[package]
name = "drip-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
drip-domain.workspace = true
rust_decimal = "1.42.1"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.49", features = ["macros"] }

[dev-dependencies]
async-trait = "0.1.89"
drip-brokers = { path = "../drip-brokers" }
drip-strategies = { path = "../drip-strategies" }
rust_decimal_macros = "1.40.0"
tokio = { version = "1.52.3", features = ["rt", "macros"] }
