[package]
name = "drip-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
rust_decimal = { version = "1.42.1", features = ["serde"] }
rust_decimal_macros = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.49", features = ["macros", "serde"] }

[dev-dependencies]
serde_json = "1.0.150"
