[package]
name = "drip-strategies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
drip-domain.workspace = true
rust_decimal = { version = "1.42.1", features = ["serde"] }
rust_decimal_macros = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
time = { version = "0.3.49", features = ["macros"] }
