[package]
name = "drip-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
drip-app = { version = "0.1.0", path = "../drip-app" }
drip-brokers = { version = "0.1.0", path = "../drip-brokers" }
drip-domain = { version = "0.1.0", path = "../drip-domain" }
drip-infra = { version = "0.1.0", path = "../drip-infra" }
drip-strategies = { version = "0.1.0", path = "../drip-strategies" }
rust_decimal = "1.42.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
time = { version = "0.3.49", features = ["macros"] }
tokio = { version = "1.52.3", features = ["net", "rt"] }

[lints]
workspace = true
